objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Favorite_Dessert__c</fullName>
        <label>Favorite Dessert</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorite_NFL_Team__c</fullName>
        <label>Favorite NFL Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hometown__c</fullName>
        <label>Hometown</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLB__c</fullName>
        <label>MLB</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NHL__c</fullName>
        <label>NHL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Pet__c</fullName>
        <label>Type of Pet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bird</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Snake</fullName>
                </value>
                <value>
                    <fullName>Fish</fullName>
                </value>
                <value>
                    <fullName>Horse</fullName>
                    <isActive>false</isActive>
                    <label>Horse</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>World_Cup_Team__c</fullName>
        <label>World Cup Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>